--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -58,6 +58,7 @@
 .header__content {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
+		gap: 50px;
 
 
 		& .header__content-text {
@@ -134,16 +135,6 @@
 	}
 }
 
-.header__modal {
-	visibility: hidden;
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	background: rgba(0, 0, 0, .3);
-}
 
 
 
@@ -189,18 +180,43 @@
 			box-shadow: inset 7px 7px 11px -8px rgba(51,51,51,0.81);
 			&::placeholder {
 				font-family: FuturaBookC;
-				font-size: 20px;
+				font-size: 16px;
 			}
 		}
 	}
+
 
 .form__hidden {
 	display: none;
 }
 
+.header__modal {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		z-index: 100;
+		background: rgba(0, 0, 0, .3);
+	}
+
+
 
 
 @media (max-width: $adaptive) {
+
+
+	.header__form {
+		margin: 100px auto;
+	}
+
+	.form__hidden {
+		display: grid;
+		align-self: flex-end;
+		justify-self: flex-start;
+		row-gap: 250px;
+	}
+
 	.header {
 		padding-top: 10px;
 		justify-content: flex-start;
@@ -296,6 +312,9 @@
 }
 
 @media (max-width: $tablet) {
+
+
+
 	.header__form {
 		max-width: 300px;
 		padding: 0;
@@ -324,14 +343,12 @@
 	margin: 100px auto;
 }
 
-.open {
-	visibility: visible;
-}
 	.header{
-		.header__content {
-		grid-template-columns: 1fr;
-		row-gap: 30px;
-	}
+		.header__content {	
+			margin: 0 auto;
+			grid-template-columns: 1fr;
+			row-gap: 30px;
+		}
 	}
 	
 	.form__hidden {
@@ -356,7 +373,7 @@
 		}
 		& .header__content {
 		margin: 0 auto;
-		max-width: 300px;
+		max-width: 500px;
 			& .content__title {
 				font-size: 40px;
 			}
@@ -367,6 +384,7 @@
 				font-size: 36px;
 			}
 			& .content__text {
+				max-width: 400px;
 				white-space: wrap;
 			}
 		}
