--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -6,6 +6,7 @@ $color-black-dark: #111111;
 $color-black-txt: #030303;
 $color-yellow: #FFA500;
 $color-gray-ligth: #C0C0C0;
+$color-gray-bg: #F2F2F4;
 
 $animation-text: .3s ease;
 
