--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,10 @@ legend {
   font-family: "FuturaDemiC";
   src: url("/fonts/FuturaDemiC.ttf") format("ttf");
 }
+body {
+  background: #F2F2F4;
+}
+
 .header {
   min-height: 850px;
   background: url("/images/header-bg.png"), url("/images/header-bg-blue.png"), no-repeat, no-repeat;
@@ -156,9 +160,9 @@ legend {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 54px;
   padding-bottom: 189px;
 }
+
 .header__menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -191,69 +195,85 @@ legend {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
-.header__menu .nav__burger {
+
+.nav__burger {
   display: none;
 }
-.header__menu .header__phone a {
-  position: relative;
+
+.header__phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
   color: #FFFFFF;
   font-family: FuturaDemiC;
   font-size: 18px;
   line-height: 22.1px;
   font-weight: 400;
 }
-.header__menu .header__phone a::before {
-  content: url("/images/ico/phoneIco.svg");
-  position: absolute;
-  top: 50%;
-  right: 160px;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-.header__menu .header__phone a:hover, .header__menu .header__phone a:active {
-  color: #969AF7;
+.header__phone a {
+  color: #FFFFFF;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
-.header .header__content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 50px;
-}
-.header .header__content .header__content-text {
-  max-width: 847px;
-}
-.header .header__content .content__title {
-  font-size: 69.23px;
-  font-family: FuturaDemiC;
-  color: #FFFFFF;
-  font-weight: 700;
-}
-.header .header__content .content__title-span {
-  font-family: FuturaDemiC;
+.header__phone a:hover, .header__phone a:active {
   color: #969AF7;
-  font-size: 56.23px;
-  white-space: nowrap;
-  font-weight: 700;
 }
-.header .header__content .content__title-h2 {
+
+.header__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__content-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header__title {
   font-family: FuturaDemiC;
-  color: #FFFFFF;
-  font-size: 61.23px;
-  font-weight: 700;
 }
-.header .header__content .content__text {
-  max-width: 672px;
+
+.content__title {
+  font-size: 69.23px;
+  color: #FFFFFF;
+}
+
+.content__title-sec {
+  font-size: 56.23px;
+  color: #969AF7;
+}
+
+.content__title-thr {
+  font-size: 61.23px;
+  color: #FFFFFF;
+}
+
+.content__text {
   font-family: FuturaBookC;
   font-size: 23px;
+  max-width: 650px;
+  text-wrap: wrap;
   color: #969AF7;
-  white-space: nowrap;
+  line-height: 29.85px;
 }
-.header .header__content .header__nav {
+
+.header__nav {
   margin-top: 37px;
 }
-.header .header__content .header__nav .header__list {
+.header__nav .header__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -263,28 +283,29 @@ legend {
           flex-direction: column;
   gap: 5px;
   padding: 25px 0 25px 31px;
-  background: rgb(150, 154, 247);
-  background: -webkit-gradient(linear, left top, right top, from(rgb(150, 154, 247)), color-stop(48%, rgba(140, 154, 200, 0)));
-  background: linear-gradient(90deg, rgb(150, 154, 247) 0%, rgba(140, 154, 200, 0) 48%);
+  background: -webkit-gradient(linear, left top, right top, from(rgba(150, 154, 247, 0.8)), color-stop(47%, rgba(150, 154, 247, 0)));
+  background: linear-gradient(to right, rgba(150, 154, 247, 0.8) 0%, rgba(150, 154, 247, 0) 47%);
   border-radius: 10px;
 }
-.header .header__content .header__nav .header__list-item {
+.header__nav .header__list-item {
   color: #FFFFFF;
   font-size: 22px;
   font-family: FuturaBookC;
 }
-.header .header__content .header__nav .header__list-item img {
+.header__nav .header__list-item img {
   margin-top: 5px;
   margin-right: 5px;
 }
-.header .form__footer {
+
+.form__footer {
   font-size: 14px;
   color: #C0C0C0;
 }
-.header .form__footer img {
+.form__footer img {
   margin-right: 5px;
 }
-.header .yellow-btn {
+
+.yellow-btn {
   margin-top: 30px;
 }
 
@@ -363,217 +384,6 @@ legend {
   display: none;
 }
 
-.header__modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 100;
-  background: rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 1500px) {
-  .header__form {
-    margin: 100px auto;
-  }
-  .form__hidden {
-    display: grid;
-    align-self: flex-end;
-    justify-self: flex-start;
-    row-gap: 250px;
-  }
-  .header {
-    padding-top: 10px;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    row-gap: 70px;
-  }
-  .header__menu {
-    margin-top: 20px;
-  }
-  .header .nav__active {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-  }
-  .header .header__menu-nav {
-    display: none;
-  }
-  .header .header__menu-nav .menu__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    position: fixed;
-    top: 100px;
-    right: 50%;
-    left: 50%;
-  }
-  .header .nav__burger {
-    position: relative;
-    width: 30px;
-    height: 18px;
-    cursor: pointer;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    z-index: 50;
-    -webkit-transition: 0.3s ease;
-    transition: 0.3s ease;
-  }
-  .header .burger-line {
-    height: 2px;
-    width: 80%;
-    -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-            transform: scale(1);
-    background: #FFFFFF;
-  }
-  .header .nav__burger::before,
-  .header .nav__burger::after {
-    content: "";
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    background: #FFFFFF;
-  }
-  .header .nav__burger::before {
-    top: 0;
-  }
-  .header .nav__burger::after {
-    bottom: 0;
-  }
-  .header .activeBtn {
-    -webkit-transform: scale(0);
-        -ms-transform: scale(0);
-            transform: scale(0);
-  }
-  .header .activeBtn::before {
-    top: 50%;
-    -webkit-transform: rotate(-45deg) translate(0, -50%);
-        -ms-transform: rotate(-45deg) translate(0, -50%);
-            transform: rotate(-45deg) translate(0, -50%);
-  }
-  .header .activeBtn::after {
-    top: 50%;
-    -webkit-transform: rotate(45deg) translate(0, 50%);
-        -ms-transform: rotate(45deg) translate(0, 50%);
-            transform: rotate(45deg) translate(0, 50%);
-  }
-  .header .header__content .content__title {
-    font-size: 50px;
-  }
-  .header .header__content .content__title-span {
-    font-size: 40px;
-  }
-  .header .header__content .content__title-h2 {
-    font-size: 47px;
-    margin-bottom: 10px;
-  }
-  .header .header__content .content__text {
-    font-size: 18px;
-  }
-  .header .header__content .header__nav .header__list-item {
-    font-size: 16px;
-  }
-}
-@media (max-width: 1250px) {
-  .header__form {
-    max-width: 300px;
-    padding: 0;
-  }
-  .header__form .form__name,
-  .header__form .form__phone,
-  .header__form .form__footer {
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    font-family: FuturaBookC;
-    font-size: 14px;
-  }
-  .header__form .header__form {
-    background: #F5F3FF;
-    height: 10px;
-  }
-  .header__form .header__form::-webkit-input-placeholder {
-    font-family: FuturaBookC;
-    font-size: 14px;
-  }
-  .header__form .header__form::-moz-placeholder {
-    font-family: FuturaBookC;
-    font-size: 14px;
-  }
-  .header__form .header__form:-ms-input-placeholder {
-    font-family: FuturaBookC;
-    font-size: 14px;
-  }
-  .header__form .header__form::-ms-input-placeholder {
-    font-family: FuturaBookC;
-    font-size: 14px;
-  }
-  .header__form .header__form::placeholder {
-    font-family: FuturaBookC;
-    font-size: 14px;
-  }
-}
-@media (max-width: 1100px) {
-  .header__form {
-    z-index: 1;
-    margin: 100px auto;
-  }
-  .header .header__content {
-    margin: 0 auto;
-    grid-template-columns: 1fr;
-    row-gap: 30px;
-  }
-  .form__hidden {
-    display: block;
-    -ms-flex-item-align: end;
-        align-self: flex-end;
-    justify-self: center;
-  }
-  .modalWindow {
-    position: relative;
-  }
-}
-@media (max-width: 800px) {
-  .header .header__phone a {
-    font-size: 16px;
-  }
-  .header .header__phone a::before {
-    left: -30%;
-  }
-  .header .header__content {
-    margin: 0 auto;
-    max-width: 500px;
-  }
-  .header .header__content .content__title {
-    font-size: 40px;
-  }
-  .header .header__content .content__title-span {
-    font-size: 28px;
-  }
-  .header .header__content .content__title-h2 {
-    font-size: 36px;
-  }
-  .header .header__content .content__text {
-    max-width: 400px;
-    white-space: wrap;
-  }
-  .container {
-    padding: 0 20px;
-  }
-}
 .main__about {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -585,6 +395,72 @@ legend {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 85px;
+  padding-top: 85px;
+  padding-bottom: 130px;
   min-height: 1200px;
+  gap: 42px;
+}
+
+.about__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 25px;
+  color: #111111;
+  text-align: center;
+}
+
+.about__title {
+  font-size: 45px;
+  font-weight: 700;
+  font-family: FuturaDemiC;
+}
+
+.about__text {
+  max-width: 1051px;
+  font-weight: 400;
+  font-size: 22px;
+  font-family: FuturaBookC;
+}
+
+.main__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  -webkit-column-gap: 43px;
+     -moz-column-gap: 43px;
+          column-gap: 43px;
+  row-gap: 32px;
+}
+
+.main__card {
+  max-width: 369px;
+  min-height: 406px;
+  padding: 40px 32px 61px 32px;
+  text-align: center;
+  background: #FFFFFF;
+  background-image: url("/images/cardBg.png");
+  border-radius: 10px;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.main__card:hover {
+  -webkit-box-shadow: 14px 10px 13px 0px rgba(0, 0, 0, 0.37);
+  box-shadow: 14px 10px 13px 0px rgba(0, 0, 0, 0.37);
+}
+
+.card__title {
+  font-family: FuturaDemiC;
+  font-size: 20px;
+  color: #2A336C;
+  margin-top: 39.29px;
+}
+
+.card__text {
+  font-family: FuturaBookC;
+  margin-top: 14px;
 }/*# sourceMappingURL=main.css.map */
