--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -297,6 +298,10 @@ body {
   margin-right: 5px;
 }
 
+.pop__up {
+  display: none;
+}
+
 .form__footer {
   font-size: 14px;
   color: #C0C0C0;
@@ -384,6 +389,60 @@ body {
   display: none;
 }
 
+@media (max-width: 1550px) {
+  .header__menu-nav {
+    display: none;
+  }
+  .pop__up {
+    position: fixed;
+    top: 75px;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 100;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  .popup .menu__list {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    padding: 50px 0;
+    overflow: auto;
+  }
+  .popup .menu__list > li {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 20px 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: #3f3f3f;
+  }
+  .popup .menu__list > li:hover {
+    background-color: rgba(122, 82, 179, 0.1);
+  }
+}
 .main__about {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -447,10 +506,34 @@ body {
   border-radius: 10px;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
+  position: relative;
 }
 .main__card:hover {
   -webkit-box-shadow: 14px 10px 13px 0px rgba(0, 0, 0, 0.37);
   box-shadow: 14px 10px 13px 0px rgba(0, 0, 0, 0.37);
+}
+.main__card::after {
+  position: absolute;
+  z-index: -1;
+  bottom: -10px;
+  right: -10px;
+  content: "Возьмите на работу";
+  display: block;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease;
+  font-family: FuturaBookC;
+  -webkit-transform: translate(-10px, -10px);
+      -ms-transform: translate(-10px, -10px);
+          transform: translate(-10px, -10px);
+}
+.main__card:hover::after {
+  opacity: 1;
+  -webkit-transform: translate(10px, 10px);
+      -ms-transform: translate(10px, 10px);
+          transform: translate(10px, 10px);
 }
 
 .card__title {
