--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -120,6 +120,10 @@ body {
 	}
 }
 
+.pop__up {
+	display: none;
+}
+
 	
 	.form__footer {
 		font-size: 14px;
@@ -186,4 +190,48 @@ body {
 
 .form__hidden {
 	display: none;
+}
+
+@media (max-width: 1550px) {
+
+	.header__menu-nav {
+		display: none;
+	}
+
+	.pop__up {
+		position: fixed;
+    top: 75px;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 100;
+    display: flex;
+    transition: 0.3s;
+	}
+
+	.popup .menu__list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    padding: 50px 0;
+    overflow: auto;
+  }
+
+	.popup .menu__list > li {
+    width: 100%;
+		display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: #3f3f3f;
+  }
+
+	.popup .menu__list > li:hover {
+    background-color: rgba(122, 82, 179, 0.1);
+  }
 }
