--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -10,12 +10,26 @@ body {
 	justify-content: space-between;
 	padding-bottom: 189px;
 }
+
+.menu__btn {
+	display: none;
+	width: 40px;
+	height: 20px;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.menu__btn span {
+	background: $color-purple-txt;
+	height: 2px;
+	width: 100%;
+}
 	
 .header__menu {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-top: 40px;
+	padding-top: 40px;
 	& .menu__list {
 		display: flex;
 		align-items: center;
@@ -34,9 +48,6 @@ body {
 	}
 }
 		
-.nav__burger {
-	display: none;
-}
 
 .header__phone {
 	display: flex;
@@ -120,9 +131,6 @@ body {
 	}
 }
 
-.pop__up {
-	display: none;
-}
 
 	
 	.form__footer {
@@ -192,46 +200,30 @@ body {
 	display: none;
 }
 
-@media (max-width: 1550px) {
-
+@media (max-width: $adaptive) {
 	.header__menu-nav {
-		display: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		width: 300px;
+		margin: 0 auto;
+		background-color: $color-purple-txt;
+		border-radius: 0 0 10px 10px;
+		padding-bottom: 30px;
+		padding-top: 20px;
+
+		& .menu__list {
+			display: block;
+			text-align: center;
+			text-wrap: balance;
+			
+			& .menu__item a:hover {
+				color: $color-dark-blue;
+			}
+		}
 	}
-
-	.pop__up {
-		position: fixed;
-    top: 75px;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: 100;
-    display: flex;
-    transition: 0.3s;
-	}
-
-	.popup .menu__list {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    padding: 50px 0;
-    overflow: auto;
-  }
-
-	.popup .menu__list > li {
-    width: 100%;
+	.menu__btn {
 		display: flex;
-    justify-content: center;
-    padding: 20px 0;
-    font-size: 20px;
-    font-weight: bold;
-    color: #3f3f3f;
-  }
-
-	.popup .menu__list > li:hover {
-    background-color: rgba(122, 82, 179, 0.1);
-  }
+	}
 }
