--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,7 @@
+body {
+	background: $color-gray-bg;
+}
+
 .container {
 	margin: 0 auto;
 	max-width: 1920px;
@@ -36,4 +40,16 @@
 		transition: $animation-text;
 		background: $color-yellow;
 	}
+}
+
+.navbar__bg {
+	background: rgba(150, 154, 247, .7);
+	-webkit-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.24);
+	-moz-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.24);
+	box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.24);
+}
+
+.navbar__bg.header__menu {
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
