--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,6 @@
 
 @import './blocks/header';
 @import './blocks/body';
+@import './blocks/swipper';
+@import './blocks//jobCards';
+@import './blocks/_dropdown';
