--- a/css/main.css
+++ b/css/main.css
@@ -208,13 +208,13 @@ body {
   padding-bottom: 40px;
   position: fixed;
   gap: 15px;
-  z-index: 2;
+  z-index: 100;
   -webkit-transition: padding-top 0.3s ease, padding-bottom 0.3s ease, -webkit-box-shadow 0.3s ease;
   transition: padding-top 0.3s ease, padding-bottom 0.3s ease, -webkit-box-shadow 0.3s ease;
   transition: box-shadow 0.3s ease, padding-top 0.3s ease, padding-bottom 0.3s ease;
   transition: box-shadow 0.3s ease, padding-top 0.3s ease, padding-bottom 0.3s ease, -webkit-box-shadow 0.3s ease;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 .header__menu .menu__list {
   display: -webkit-box;
@@ -456,6 +456,7 @@ body {
     transition: -webkit-transform 0.3s ease;
     transition: transform 0.3s ease;
     transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+    border-radius: 0 0 10px 10px;
   }
   .header__menu-nav .menu__list {
     display: block;
@@ -663,7 +664,7 @@ body {
   gap: 42px;
 }
 
-.about__text {
+.about__text-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -671,6 +672,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   row-gap: 25px;
   color: #111111;
   text-align: center;
@@ -679,6 +683,7 @@ body {
 .about__title {
   font-size: 45px;
   font-weight: 700;
+  text-align: center;
   font-family: FuturaDemiC;
 }
 
@@ -761,60 +766,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 50px;
   min-height: 728px;
   background: url("/images/ico/mask.svg"), url("/images/ico/swipperBl.png"), no-repeat, no-repeat;
-}
-
-.swiper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 1420px;
-  width: 100%;
-  height: 174px;
-  margin: 0;
-}
-
-.swiper-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 18px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-}
-
-.swiper-slide {
-  max-width: 242px;
-  background: #FFFFFF;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 10px;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  background: #969AF7;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  font-size: 20px;
-  color: #FFFFFF;
 }
 
 .manufacturer__title {
@@ -828,6 +785,7 @@ body {
   font-family: FuturaBookC;
   font-size: 20px;
   color: #FFFFFF;
+  max-width: 1280px;
 }
 
 @media (max-width: 1350px) {
@@ -847,6 +805,14 @@ body {
   .about__text {
     font-size: 18px;
   }
+  .manufacturer__title {
+    font-size: 40px;
+  }
+  .manufacturer__text {
+    font-size: 18px;
+    text-align: center;
+    padding: 0 5px 0 5px;
+  }
 }
 @media (max-width: 460px) {
   .about__title {
@@ -861,4 +827,154 @@ body {
   .main__card .card__text {
     font-size: 14px;
   }
+  .manufacturer__title {
+    font-size: 30px;
+  }
+  .manufacturer__text {
+    font-size: 14px;
+  }
+}
+.swiper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1280px;
+  width: 100%;
+}
+
+.swiper-wrapper {
+  max-width: 1280px;
+}
+
+.swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #FFFFFF;
+  border-radius: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 18px;
+  height: auto;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  background-color: #969AF7;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  color: #FFFFFF;
+  font-size: 10px;
+}
+
+.job__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 42px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 135px;
+  background: url("/images/cards-bg.png");
+  background-position: 100% 100%;
+  background-size: 200%;
+}
+
+.job__card {
+  display: grid;
+  grid-template-columns: 60px 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 21px;
+  padding: 39px 40px 50px 38px;
+  padding-right: 50px;
+  background: url("/images/geometryC/c1.svg") no-repeat;
+  max-width: 439.47px;
+  height: 268.37px;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+.job__card:hover, .job__card:active {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.job__card:nth-child(2) {
+  background: url("/images/geometryC/c2.png") no-repeat;
+}
+.job__card:nth-child(3) {
+  background: url("/images/geometryC/c3.png") no-repeat;
+}
+.job__card:nth-child(4) {
+  background: url("/images/geometryC/c4.png") no-repeat;
+}
+.job__card:nth-child(5) {
+  background: url("/images/geometryC/c5.png") no-repeat;
+}
+.job__card:nth-child(6) {
+  background: url("/images/geometryC/c6.png") no-repeat;
+}
+
+.title-number {
+  font-family: FuturaDemiC;
+  justify-self: flex-end;
+  font-size: 36px;
+  color: #969AF7;
+}
+
+.job__cards-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 28px;
+}
+
+.cards-title {
+  font-family: FuturaDemiC;
+  font-size: 18px;
+  color: #FFFFFF;
+  padding-top: 10px;
+}
+
+.cards-text {
+  font-family: FuturaBookC;
+  font-size: 18px;
+  max-width: 291px;
+  color: #FFFFFF;
+}
+
+.cardsBtn {
+  margin-bottom: 154px;
+}
+
+.qua {
+  padding-top: 0;
+  background: url("/images/quaBl.png"), no-repeat;
 }/*# sourceMappingURL=main.css.map */
