--- a/scss/blocks/_body.scss
+++ b/scss/blocks/_body.scss
@@ -8,9 +8,10 @@
 	gap: 42px;
 }
 
-.about__text {
+.about__text-content {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	row-gap: 25px;
 	color: $color-black-dark;
 	text-align: center;
@@ -19,6 +20,7 @@
 .about__title {
 	font-size: 45px;
 	font-weight: 700;
+	text-align: center;
 	font-family: FuturaDemiC;
 }
 
@@ -88,47 +90,10 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	gap: 50px;
 	min-height: 728px;
 	background: url('/images/ico/mask.svg'), url('/images/ico/swipperBl.png') , no-repeat, no-repeat;
-}
-
-.swiper {
-	display: flex;
-	max-width: 1420px;
-	width: 100%;
-	height: 174px;
-	margin: 0;
-}
-
-.swiper-wrapper {
-	display: flex;
-	gap: 18px;
-	align-items: center;
-	box-sizing: content-box;
-}
-
-.swiper-slide {
-	max-width: 242px;
-	background: $color-white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 10px;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-	background: $color-purple-txt;
-	border-radius: 50%;
-	width: 40px;
-	height: 40px;
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-	font-size: 20px;
-	color: $color-white;
 }
 
 .manufacturer__title {
@@ -142,6 +107,7 @@
 	font-family: FuturaBookC;
 	font-size: 20px;
 	color: $color-white;
+	max-width: 1280px;
 }
 
 @media (max-width: 1350px) {
@@ -163,6 +129,14 @@
 	.about__text {
 		font-size: 18px;
 	}
+	.manufacturer__title {
+		font-size: 40px;
+	}
+	.manufacturer__text {
+		font-size: 18px;
+		text-align: center;
+		padding: 0 5px 0 5px;
+	}
 }
 
 @media (max-width: 460px) {
@@ -180,5 +154,11 @@
 		.card__text {
 			font-size: 14px;
 		}
+	}
+	.manufacturer__title {
+		font-size: 30px;
+	}
+	.manufacturer__text {
+		font-size: 14px;
 	}
 }
