--- a/scss/blocks/_jobCards.scss
+++ b/scss/blocks/_jobCards.scss
@@ -4,9 +4,8 @@
 	row-gap: 42px;
 	align-items: center;
 	padding-top: 135px;
-	background: url('/images/cards-bg.png');
-	background-position: 100% 100%;
-	background-size: 200%;
+	padding-bottom: 134px;
+	background: url('/images/cards-bg.png') no-repeat bottom;
 }
 
 .job__card {
